# Alconna-Graia

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test_dispatcher.py  test_saya_main.py  test_saya_module.py
.mina/: ariadne.toml  avilla.toml  core.toml
arclet/alconna/graia/: __init__.py  analyser.py  create.py  dispatcher.py  saya.py  utils.py
src/arclet/alconna/ariadne/: __init__.py  adapter.py  dispatcher.py  tools.py  typings.py
src/arclet/alconna/avilla/: __init__.py  adapter.py  dispatcher.py  tools.py  typings.py
src/arclet/alconna/graia/: __init__.py  adapter.py  alc.py  analyser.py  argv.py  create.py  dispatcher.py  model.py  saya.py  service.py  shortcut.py  tools.py  utils.py
src/arclet/alconna/graia/i18n/: .config.json  en-US.json  zh-CN.json
src/arclet/alconna/ichika/: __init__.py  adapter.py  typings.py
src/test/: test_dispatcher.py  test_saya_main.py
test/: ariadne_saya.py  avilla_saya_main.py  avilla_saya_module.py  base.py
