[project]
name = "arclet-alconna-graia-workspace"
version = "0.0.1"

dependencies = [
    "arclet-alconna<2.0.0, >=1.8.1",
    "arclet-alconna-tools<0.8.0, >=0.7.0",
    "tarina>=0.4.2",
    "nepattern<0.7.0, >=0.6.0",
    "graia-amnesia>=0.5.0",
    "graia-broadcast>=0.18.2",
    "graia-saya>=0.0.17",
    "avilla-core>=1.0.0a20",
    "launart>=0.5.0",
    "creart>=0.3.0",
]
requires-python = ">=3.9"

[build-system]
requires = ["mina-build"]
build-backend = "mina.backend"

[tool]

[tool.mina]
enabled = false

[tool.black]
include = '\.pyi?$'
line-length = 120
target-version = ['py39']


[tool.isort]
profile = "black"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "editables>=0.3.0",
    "fix-future-annotations>=0.5.0",
    "avilla-console>=0.2.0",
    "avilla-qqapi>=1.0.0a20",
]
[tool.pdm.scripts]
buildall = "pdm mina build -a"
pub = "pdm publish --no-build"
puball = {composite = ["buildall", "pub"]}
[tool.pdm.options]
add = ["--no-isolation", "--no-self"]
install = ["--no-isolation"]
update = ["--no-isolation"]
sync = ["--no-isolation"]
