[project]
name = "arclet-alconna-graia-workspace"
version = "0"

dependencies = [
    "arclet-alconna<2.0.0, >=1.8.12",
    "arclet-alconna-tools<0.8.0, >=0.7.4",
    "tarina>=0.5.0",
    "nepattern<0.8.0, >=0.7.3",
    "graia-amnesia>=0.5.0",
    "graia-broadcast>=0.18.2",
    "graia-saya>=0.0.17",
    "avilla-core>=1.0.0a20",
    "launart>=0.5.0",
    "creart>=0.3.0",
]
requires-python = ">=3.9"

[build-system]
requires = ["mina-build<0.6"]
build-backend = "mina.backend"

[tool]

[tool.mina]
enabled = true

[tool.black]
include = '\.pyi?$'
line-length = 120
target-version = ['py39']


[tool.isort]
profile = "black"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "editables>=0.3.0",
    "fix-future-annotations>=0.5.0",
    "avilla-console>=0.2.0",
    "avilla-qqapi>=1.0.0a20",
]

[tool.pdm.scripts]
buildall = "pdm mina build --all"
pub = "pdm publish --no-build"
puball = {composite = ["buildall", "pub"]}

